@@ -1,3 +1,4 @@
+option('systemd', type: 'feature', description: 'systemd support (using libsystemd)')
 option('pg', type: 'feature', description: 'PostgreSQL client for Lua')
 
 option('documentation', type: 'feature', description: 'Build documentation')
