@@ -3,6 +3,7 @@ cm4all-myproxy (0.6) unstable; urgency=low
   * use Rendezvous Hashing instead of Consistent Hashing
   * implement (optional) monitoring
   * fix memory leak
+  * make libsystemd optional
   * debian: restart after upgrade
 
  --   
